# exam_rocket_multipart

./: Cargo.toml
src/: main.rs
src/context/: mod.rs  tmpl_context.rs
src/main_handler/: handler.rs
templates/: index.stpl
